styles/main.css
:root {
  --primary-blue: hsl(245, 75%, 52%);
  --pale-blue: hsl(225, 100%, 94%);
  --very-pale-blue: hsl(225, 100%, 98%);
  --desaturated-blue: hsl(224, 23%, 55%);
  --dark-blue: hsl(223, 47%, 23%);
}

body {
  font-family: 'Red Hat Display', sans-serif;
  font-size: 16px;
  margin: 0;
}

.container {
  display: -webkit-flex;
  display: flex;
  -ms-align-items: center;
  align-items: center;
  justify-content: center;
  min-height: calc(100vh - 64px);
  padding-top: 24px;
  padding-left: 24px;
  padding-right: 24px;
  padding-bottom: 40px;
  background-image: url('../images/pattern-background-desktop.svg');
  background-repeat: no-repeat;
  background-position: top;
  background-size: contain;
  background-attachment: fixed;
  background-color: #e0e8ff;
  background-color: var(--pale-blue);
}

@media screen and (max-width: 420px) {
  .container {
    padding-left: 24px;
    padding-right: 24px;
  }
}

.card {
  max-width: 450px;
  text-align: center;
  background-color: white;
  border-radius: 16px;
  padding-bottom: 18px;
}

@media screen and (max-width: 420px) {
  .card {
    padding-bottom: 6px;
  }
}

.card-content {
  padding-left: 48px;
  padding-right: 48px;
}

@media screen and (max-width: 420px) {
  .card-content {
    padding-left: 24px;
    padding-right: 24px;
  }
}

.card-banner {
  border-radius: 16px 16px 0 0;
  max-width: 100%;
  object-fit: cover;
}

h1 {
  font-weight: 900;
  margin-top: 40px;
  margin-bottom: 18px;
  font-size: 28px;
  color: navy;
  color: var(--dark-blue);
}

@media screen and (max-width: 420px) {
  h1 {
    font-size: 22px;
    margin-top: 28px;
    margin-bottom: 16px;
  }
}

.card p {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
  color: #99b;
  color: var(--desaturated-blue);
  line-height: 1.6;
}

@media screen and (max-width: 420px) {
  .card p {
    margin-bottom: 24px;
    margin-left: 8px;
    margin-right: 8px;
  }
}

.card-item {
  display: -webkit-flex;
  display: flex;
  -ms-align-items: center;
  align-items: center;
  justify-content: space-between;
  padding: 24px 24px 25px 24px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 32px;
  background-color: #eee;
  background-color: var(--very-pale-blue);
  border-radius: 10px;
}

@media screen and (max-width: 420px) {
  .card-item {
    padding: 16px;
    margin-bottom: 22px;
  }
}

.item-icon {
  border-radius: 50%;
  display: inline-block;
}

.details {
  display: inline-block;
  width: 100%;
  padding-left: 20px;
  line-height: 1.6;
  text-align: left;
}

@media screen and (max-width: 420px) {
  .details {
    font-size: 14px;
  }
}

.item-name {
  font-weight: 900;
  color: navy;
  color: var(--dark-blue);
}

.item-price {
  color: #88a;
  color: var(--desaturated-blue);
}

.card-item a {
  color: blue;
  color: var(--primary-blue);
  font-weight: 700;
  font-size: 14px;
}

@media screen and (max-width: 420px) {
  .card-item a {
    font-size: 13px;
  }
}

.card-item a:hover {
  text-decoration: none;
  opacity: 70%;
}

.btn {
  display: block;
  margin: 16px auto 16px auto;
  width: 100%;
  border: 0;
  height: 50px;
  border-radius: 10px;
  font-weight: 700;
  font-size: 15px;
}

@media screen and (max-width: 420px) {
  .btn {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}

.btn-primary {
  background-color: blue;
  background-color: var(--primary-blue);
  color: white;
}

.btn-transparent {
  color: #88a;
  color: var(--desaturated-blue);
  background-color: transparent;
}

.btn-primary:hover {
  opacity: 70%;
}

.btn-transparent:hover {
  color: black;
}

.btn:active {
  box-shadow: inset 0 0 2px 2px black;
  padding-top: 5px;
}

.attribution {
  position: absolute;
  bottom: 1em;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

